SCI-981 fix issue when showZero and forceCollapse are combined

--- a/src/styles/Tally.css
+++ b/src/styles/Tally.css
@@ -63,7 +63,7 @@
 }
 
 .forceCollapse {
-  display: none !important;
+  display: none;
 }
 
 .verticalTally {
